# rose-ai

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.bat
rose/: __init__.py  cli.py  config.py  executor.py  formatter.py  main.py  memory.py  models.py  permissions.py  router.py  tools.py  voice.py  web.py
